--- a/index.html
+++ b/index.html
@@ -1,52 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
+    <title>Registration Form</title>
+    <link type="text/css" rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <!--STEP 2-->
+    <!--This part needs to be copied from the STEP 2 field of the lending edit page-->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://webtracking-v01.creatio.com/JS/track-cookies.js"></script>
+    <script src="https://webtracking-v01.creatio.com/JS/create-object.js"></script>
+    <script>
+        /**
+         * Replace the "css-selector" placeholders in the code below with the element selectors on your landing page.
+         * You can use #id or any other CSS selector that will define the input field explicitly.
+         * Example: "Email": "#MyEmailField".
+         * If you don't have a field from the list below placed on your landing, leave the placeholder or remove the line.
+         */
+        var config = {input[type="number"],
+            fields: {
+                "Subject": "#subject-field", // Case subject
+                "Email": "#email-field", // Visitor's email
+                "Name": "#name-field", // Visitor's name code
+                "Phone": "#phone-field", // Visitor's phone number
+            },
+            landingId: "d9f743e2-c225-4058-988d-f46adcf2128a",
+            serviceUrl: "https://019208-marketing.creatio.com/0/ServiceModel/GeneratedObjectWebFormService.svc/SaveWebFormObjectData",
+            redirectUrl: "https://yasu1727.github.io/First-Commit/",
+            onSuccess: function(response) {
+                window.alert(response.resultMessage);
+            },
+            onError: function(response) {
+                window.alert(response.resultMessage);
+            }
 
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #04AA6D;
-  color: white;
-}
-</style>
+        };
+        /**
+         * The function below creates a object from the submitted data.
+         * Bind this function call to the "onSubmit" event of the form or any other elements events.
+         * Example: <form class="mainForm" name="landingForm" onSubmit="createObject(); return false">
+         */
+        function createObject() {
+            landing.createObjectFromLanding(config)
+        }
+    </script>
+    <!--STEP 2-->
 </head>
 <body>
-
-<div class="topnav">
-  <a class="active" href="#home">Home</a>
-  <a href="../circus.html">Circus</a>
-  <a href="../hamlet.html">Hamlet</a>
-  <a href="somerset.html">Somerset</a>
-  <a href="#refereeForms">Referee Form</a>
+<div>
+    <h2>Registration form</h2>
+    <form class="mainForm" name="landingForm" onSubmit="createObject(); return false">
+        Full Name:<br>
+        <input type="text" name="inputid" id="inputid" required><br><br>
+        Email:<br>
+        <input type="email" name="Email" id="email-field" required ><br><br>
+        Phone:<br>
+        <input type="tel" name="Phone" id="phone-field"  pattern="[0-9]{10}" required ><br><br>
+        Date Of Birth:<br>
+        <input type="date" name="inputDob" id="inputDob" min="2003-01-01" max="2017-01-01" required ><br><br>
+        Subject:<br>
+        <input type="text" name="subject" id="subject-field"><br>
+        <input type="submit" value="Submit">
+        
+        </font>
+    </form>
 </div>
-
-<div style="padding-left:16px">
-  <h2>Residential Land forms</h2>
-
-</div>
-
 </body>
 </html>
