--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
          */
         var config = {input[type="number"],
             fields: {
-                "Subject": "#subject-field", // Case subject
+                "Full Name": "#name-field", // Visitor's name code
                 "Email": "#email-field", // Visitor's email
-                "Name": "#name-field", // Visitor's name code
                 "Phone": "#phone-field", // Visitor's phone number
+                "Date Of Birth": "#dob-field", // Case subject
+                "Subject": "#subject-field", // Case subject
             },
             landingId: "d9f743e2-c225-4058-988d-f46adcf2128a",
             serviceUrl: "https://019208-marketing.creatio.com/0/ServiceModel/GeneratedObjectWebFormService.svc/SaveWebFormObjectData",
@@ -50,13 +51,13 @@
     <h2>Registration form</h2>
     <form class="mainForm" name="landingForm" onSubmit="createObject(); return false">
         Full Name:<br>
-        <input type="text" name="inputid" id="inputid" required><br><br>
+        <input type="text" name="inputid" id="name-field" required><br><br>
         Email:<br>
         <input type="email" name="Email" id="email-field" required ><br><br>
         Phone:<br>
         <input type="tel" name="Phone" id="phone-field"  pattern="[0-9]{10}" required ><br><br>
         Date Of Birth:<br>
-        <input type="date" name="inputDob" id="inputDob" min="2003-01-01" max="2017-01-01" required ><br><br>
+        <input type="date" name="inputDob" id="dob-field" min="2003-01-01" max="2017-01-01" required ><br><br>
         Subject:<br>
         <input type="text" name="subject" id="subject-field"><br>
         <input type="submit" value="Submit">
