--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <!--STEP 2-->
     <!--This part needs to be copied from the STEP 2 field of the lending edit page-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://webtracking-v01.creatio.com/JS/track-cookies.js"></script>
     <script src="https://webtracking-v01.creatio.com/JS/create-object.js"></script>
     <script>
