--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          * Example: "Email": "#MyEmailField".
          * If you don't have a field from the list below placed on your landing, leave the placeholder or remove the line.
          */
-        var config = {input[type="number"],
+        var config = {
             fields: {
                 "Full Name": "#name-field", // Visitor's name code
                 "Email": "#email-field", // Visitor's email
